# knacs

./: CMakeLists.txt  Design.md
driver/: CMakeLists.txt  Kbuild  buff_alloc.c  buff_alloc.h  dma_area.c  dma_area.h  dma_buff.c  dma_buff.h  dma_pages.c  dma_pages.h  dma_stream.c  dma_stream.h  knacs.h  nacs_char.c  obj_pool.c  obj_pool.h  ocm.c  ocm.h  page_mgr.c  page_mgr.h  pulse_ctrl.c  pulse_ctrl.h
